<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/progressBar"
            android:visibility="gone"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/statusImageView"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calibration"
            android:textAlignment="center"
            style="@style/TitleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sbpTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/sbp"
            app:hintTextColor="@color/color_primary"
            app:layout_constraintEnd_toStartOf="@id/dbpTextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dbpTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/dbp"
            app:hintTextColor="@color/color_primary"
            app:layout_constraintEnd_toStartOf="@id/calibrationButton"
            app:layout_constraintStart_toEndOf="@id/sbpTextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calibrationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dbpTextInputLayout"
            app:layout_constraintTop_toTopOf="@id/dbpTextInputLayout"
            app:layout_constraintBottom_toBottomOf="@id/dbpTextInputLayout"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>